--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<p>Hello 大家好</p>
+<h2>Hello 大家好</h2>
 <p>这是我的个人网站。 </p>
 <p>很高兴你来到这里, 你可以在以下的网站找到我</p>
 
 <ul>
-  <li> <a href="#">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
+  <li> <a href="#">我的博客(已经不更了,现在在知乎写文章)</a> </li>
 </ul>
